--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   provider: ^4.3.3
   circular_check_box: ^1.0.4
   flutter_screenutil: ^2.3.0
+  get: ^3.25.6
   flutter:
     sdk: flutter
 
